cluster/overlays/zahariev.com/mealie/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mealie
  namespace: mealie
spec:
  template:
    spec:
      containers:
      - name: mealie
