cluster/overlays/zahariev.com/mealie/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mealie
  namespace: mealie
spec:
  rules:
  - host: mealie.zahariev.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mealie
            port:
              number: 9000
  tls:
  - hosts:
    - mealie.zahariev.com
    secretName: mealie-tls
